<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.jsch.androidtunnel.MainActivity">
    <item
        android:id="@+id/import_file"
        android:title="@string/import_file"/>
    <item
        android:id="@+id/export_file"
        android:title="@string/export_file"/>

    <item
        android:id="@+id/clearlogs"
        android:title="@string/clear_logs"/>
    <item
        android:id="@+id/clearconfig"
        android:title="@string/reset_app_config"/>

    <item
        android:id="@+id/cleardata"
        android:title="@string/reset_app_data"/>

    <item
        android:id="@+id/forcestop"
        android:title="@string/force_stop"/>


    <item
        android:id="@+id/exit_app"
        android:title="@string/exit"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>